# shard-markdown

./: .flake8  .gitignore  .mcp.json  .mcp.json.back  .pre-commit-config.yaml  CHROMADB_1.0.16_FIX_SUMMARY.md  CLAUDE.md  E2E_CHROMADB_INVESTIGATION_REPORT.md  E2E_TEST_INVESTIGATION_REPORT.md  GITHUB_ISSUE_IP_CORRUPTION.md  INVESTIGATION_REPORT.md  ISSUE_126_REFINED.md  README.md  THREADING_REMOVAL_VALIDATION_REPORT.md  baseline_lines.txt  baseline_tests.txt  claude-code.md  coverage.json  coverage_summary.json  docker-compose.test.yml  final_lines.txt  final_tests.txt  github.md  mock_chromadb_storage.json  pr_65_diff.txt  pyproject.toml  pytest.ini  pytest_full_output.txt  pytest_output.txt  sum_random.py  test_encoding.py  test_import.py  test_output.txt  test_results.txt  test_results_full.txt  uv.lock.backup
.claude/: CLAUDE.md  settings.json
.claude/agents/: ci-expert.md  code-review-validator.md  code-reviewer-enhanced.md  codebase-knowledge-architect.md  designer-agent.md  docker-chromadb-debugger.md  github-actions-infrastructure-debugger.md  graph-builder.md  issue-investigator.md  pr-failure-investigator.md  python-developer-agent.md  python-production-expert.md  qa-tester-agent.md  task-planner-agent.md  technical-design-architect.md  validation-expert-agent.md
.claude/commands/: build-cli-tool.md  execute-task.md  history.md  refactor.md  review-issue.md  review-pr.md
.claude/hooks/: precommit.py
.data/: chroma.sqlite3
.github/: CHROMADB_SETUP_SOLUTION.md  CI_CD_SETUP.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/PULL_REQUEST_TEMPLATE/: type_safety_checklist.md
.github/actions/setup-chromadb/: action.yml
.github/workflows/: automation.yml  ci.yml  claude.yml  codeql.yml  dependencies.yml  docs.yml  e2e.yml  release.yml  type-safety-monitoring.yml
.plan/refactoring/: index.md  remove-threading-implementation-plan.md
.serena/: project.yml
docs/: DEVELOPMENT_WORKFLOW.md  api-reference.rst  architecture-decisions.md  architecture-wiki.md  architecture.md  changelog.rst  chromadb-version-compatibility.md  ci-cd-setup.md  cli-interface.md  cli-reference.rst  code-quality-improvements.md  comprehensive-test-execution-report.md  conf.py  config-consolidation-implementation-notes.md  config-review-implementation-notes.md  configuration.rst  contributing.rst  converage_job_failure_soluation_evaluation.md  dependency-map.md  deployment-guide.md  development-phases.md  development-setup.md  development_handoff_summary.md  documentation-build-test-report.md  documentation-quality-assessment.md  error-handling.md  examples.rst  final-flake8-verification-report.md  flake8-comprehensive-test-report.md  formatting-verification-report.md  implementation-guide.md  implementation-notes.md  index.rst  installation.rst  issue-167-task-plan.md  manual-testing-checklist.md  milestones.md  overview.rst  pattern-matching-implementation.md  performance-metrics.md  (+19 more)
docs/api/: modules.rst  shard_markdown.chromadb.client.rst  shard_markdown.chromadb.collections.rst  shard_markdown.chromadb.factory.rst  shard_markdown.chromadb.mock_client.rst  shard_markdown.chromadb.operations.rst  shard_markdown.chromadb.rst  shard_markdown.cli.commands.collections.rst  shard_markdown.cli.commands.config.rst  shard_markdown.cli.commands.process.rst  shard_markdown.cli.commands.query.rst  shard_markdown.cli.commands.rst  shard_markdown.cli.main.rst  shard_markdown.cli.rst  shard_markdown.config.defaults.rst  shard_markdown.config.loader.rst  shard_markdown.config.rst  shard_markdown.config.settings.rst  shard_markdown.core.chunking.base.rst  shard_markdown.core.chunking.engine.rst  shard_markdown.core.chunking.fixed.rst  shard_markdown.core.chunking.rst  shard_markdown.core.chunking.structure.rst  shard_markdown.core.metadata.rst  shard_markdown.core.models.rst  shard_markdown.core.parser.rst  shard_markdown.core.processor.rst  shard_markdown.core.rst  shard_markdown.rst  shard_markdown.utils.errors.rst  shard_markdown.utils.logging.rst  shard_markdown.utils.rst  shard_markdown.utils.validation.rst
docs/migrations/: remove-custom-parsing.md
docs/proposals/: benchmark-methodology.md  implementation-guide.md  semantic-advanced-implementation.md  semantic-chunking-optimization.md  semantic-optimized-implementation.md
guides/: development-guide.md  testing-guide.md
plans/: review-tasks.md  task-correction-168.md
scripts/: __init__.py  configure_branch_protection.py  detect-chromadb-version.sh  process_coverage.py  setup_dev_environment.py  test-chromadb-fixture.py  verify.py
src/: mock_chromadb_storage.json
src/shard_markdown/: __init__.py  __main__.py  types.py
src/shard_markdown/chromadb/: __init__.py  async_client.py  async_protocol.py  client.py  collections.py  decorators.py  factory.py  mock_client.py  operations.py  protocol.py  utils.py  version_detector.py
src/shard_markdown/cli/: __init__.py  bridge.py  main.py  patterns.py  processor.py  routing.py  utils.py
src/shard_markdown/config/: __init__.py  defaults.py  loader.py  settings.py  (+2 more)
tests/: __init__.py  conftest.py  conftest.py.bak
tests/benchmarks/: __init__.py  test_semantic_performance.py
tests/cli/: test_integration.py  test_patterns.py  test_routing.py
tests/constants/: __init__.py
tests/e2e/: test_batch_processing.py  test_chromadb_integration.py  test_cli_workflows.py  test_complex_markdown_simplified.py  test_simplified_cli.py  test_tc_e2e_026_027_028.py  utils.py
tests/fixtures/: __init__.py  chromadb_fixtures.py
tests/integration/: test_cli_config.py  test_document_processing.py  test_edge_case_integration.py  test_encoding_integration.py  test_pattern_matching_integration.py
tests/performance/: README.md  test_async_performance.py  test_batch_performance.py  test_benchmarks.py  test_large_files.py
tests/unit/: test_chunker.py  test_chunking.py  test_main_module.py  test_metadata.py  test_models.py  test_parser.py  test_refactoring_example.py  test_utilities_example.py  test_utils.py
tests/utils/: README.md  helpers.py
(+93 files in other folders)
